# datn_ur3_robot_and_human

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  package.xml  ur3_start_checklist.md
astar_simulation/: README.md  __init__.py  app_window.py  main.py  obstacle_padding.py  planner_adapter.py  requirements.txt  run_logger.py  simulation_model.py
astar_simulation/tests/: test_app_window_helpers.py  test_obstacle_padding.py  test_planner_adapter.py  test_run_logger.py  test_simulation_model.py
docs/: MODULES_INDEX.md  MODULE_A_kinect_skeleton_tracker.md  MODULE_B_data_skeleton.md  MODULE_C_dual_kinect_fusion_controller.md  MODULE_D_skeleton_obstacle_builder.md  MODULE_E_moveit_scene_manager.md  MODULE_F_planner_ab_replan_node.md  MODULE_G_astar_improved_3d.md  SYSTEM_FLOW_DIAGRAMS.md
docs/superpowers/plans/: 2026-06-15-astar-improved-3d-desktop-simulator.md  2026-06-15-dual-kinect-fusion-controller.md  2026-06-15-run-logging-and-ui-polish.md  2026-06-15-staged-astar-animation.md
docs/superpowers/specs/: 2026-06-15-astar-improved-3d-desktop-simulator-design.md  2026-06-15-dual-kinect-fusion-controller-design.md  2026-06-17-speed-scaled-astar-padding-design.md  (+1 more)
launch/: dual_kinect_system.launch  rviz.launch  system.launch  system_back.launch
scripts/: astar_improved_3d.py  astar_lpa_3d.py  data_skeleton.py  dual_kinect_fusion_controller.py  kinect_skeleton_tracker.py  moveit_scene_manager.py  multi_kinect_skeleton_controller.py  planner_ab_replan_node.py  skeleton_obstacle_builder.py  test_astar_lpa_3d.py
