<?xml version="1.0"?>
<package format="2">
  <name>ur3_hrc_planner</name>
  <version>0.0.0</version>
  <description>UR3 human-robot collaboration planner with Kinect v2</description>

  <maintainer email="trungvdt@todo.todo">trungvdt</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_commander</depend>
  <depend>shape_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- Python pip runtime: ultralytics, mediapipe, pylibfreenect2. -->

  <export>
  </export>
</package>
